# flexible_flowshop

./: .gitignore  pyproject.toml  requirements.txt
conf/: config.yaml
misc/: 19082023_plot_several_lines.py  custom_plots_plt.py  plot_all_tensorboard_logs.py  plot_grouped_monitor_files.py  plot_individual_monitor_files.py  plot_several_runs.py  plot_single_run_monitor_files.py
src/: main.py
src/custom_plotters/boxplot_plotter/: BoxPlotPlotter.py
src/custom_plotters/gantt_plotter/: GanttPlotter.py
src/custom_plotters/raincloud_plotter/: raincloud_plotter.py
src/experiments/: experiments.py
src/experiments/results/: experiments_control.xlsx
src/experiments/results/00_model_mismatch/: Mks_26.576_scheduling_results.xlsx
src/experiments/results/01_midterm_results/: readme.txt
src/experiments/results/02_heuristics/edd/: EDD_Mks_35.789_OCC_74.124_WL_230.753_Sequences.txt  EDD_Mks_35.789_OCC_74.124_WL_230.753_Solution.txt  EDD_Mks_35.789_scheduling_results.xlsx  EDD_Mks_43.002_OCC_87.322_WL_679.612_Sequences.txt  EDD_Mks_43.002_OCC_87.322_WL_679.612_Solution.txt  EDD_Mks_43.002_scheduling_results.xlsx  EDD_Summary.txt  EDD_rainplot.csv
src/experiments/results/02_heuristics/fifo/: FIFO_Summary.txt  (+7 more)
src/experiments/rl_algorithms/: maskable_ppo.py  ppo.py
src/flexible_flow_shop/: environment.py
src/flexible_flow_shop/resources/functions/: class_objects.py  custom_wrappers.py  global_variables.py  main_wrapper.py  scheduling_functions.py
src/flexible_flow_shop/resources/workbooks/: general_scheduling_data.xlsx  kopanos_scheduling_data.xlsx
(+548 files in other folders)
